# kaggle_house_price

./: .gitignore  README.md  main.py  nbconvert.bat  pyproject.toml  re-analysis.ipynb  re-analysis.py  requirements.in  requirements.txt  メモ.txt  再分析.ipynb  再分析.py  自分で詳細に分析.ipynb
data_description/: data_descripsion_simple_jp.csv  data_description_jp.txt
junk/: OrdinalEncoding準備.txt  memo.txt  nbconvert.bat  評価指標_mapeとは.txt
junk/データ説明/: data_descripsion_simple_jp.csv
junk/欠損値処理/: missing_value_processing.csv
missing_value/: missing_value_processing copy.csv
notebooks/: notebook01.ipynb  notebook02.ipynb
notebooks/nb_cleared/: 再分析.ipynb  過去の分析.ipynb
tools/: nbconvert.bat  nbconvert_html.bat  nbconvert_runner_pipx.ps1
train_test_submission/: submission.csv
venv_kaggle_house_price管理/: README.md  requirements.in  requirements.txt  自宅venv_kaggle_house_price起動.ps1
物置/: nbconvert_no-prompt.bat
